# musiql

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.internal_tools  README.md  alembic.ini  authtoken_api.py  boto3_tools.py  db.py  index.html  models.py  musiql_backup.dump  pyproject.toml  requirements.txt  run.sh  s3_service.py  server.py  settings.py  utility.py
.github/workflows/: integration.yml
database/: db.py  models.py
internal_tools/: callback_server.py  good_music.dump  recover_album_covers.py  scrape.py
maintanence/: canonicalize-names.py  clean-dump.py
maintenance/: canonicalize-names.py  clean-dump.py
media_ingestion/media_ingestion/: handler.py  server.py
media_ingestion/media_ingestion_api/: media_ingestion_api.py
migrations/: env.py
migrations/versions/: 11f4b571ad5f_user_library_and_models_tables.py  26b7b9040dbe_fix_url_to_be_a_string.py  2c8bd6a8f50a_create_alembic_tables.py  3e00e2da9679_removing_index_column_indexing_artists.py  4f71ab8956f7_add_history_table.py  a8f33880f435_add_model_updates_table.py  ab2f6ac2669a_initial_schema.py  cfdef25cd9a2_history_multi_user_support.py
musiql/: handler.py  server.py
musiql_api/: GraphAMP.py  add_music_request_api.py  data_models.py  db.py  model_visualization_api.py  models.py  models_api.py  musiql_api.py  s3_service.py  settings.py  user_management_api.py
scripts/: bug_report.sh
